Improve and verify Price Info

--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
@@ -155,40 +155,40 @@
                     <input type="text" id="zoneName" name="zoneName">
                 </div>
                 <div class="form-group">
-                    <label for="productId">Product ID</label>
-                    <input type="text" id="productId" name="productId">
+                    <label for="ProductId">Product ID</label>
+                    <input type="text" id="ProductId" name="ProductId">
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group">
-                    <label for="instanceType">Instance Type</label>
-                    <input type="text" id="instanceType" name="instanceType">
+                    <label for="SpecName">Instance Type</label>
+                    <input type="text" id="SpecName" name="SpecName">
                 </div>
                 <div class="form-group">
-                    <label for="vcpu">vCPU</label>
-                    <input type="text" id="vcpu" name="vcpu">
+                    <label for="VCpu.Count">vCPU Count</label>
+                    <input type="text" id="VCpu.Count" name="VCpu.Count">
                 </div>
                 <div class="form-group">
-                    <label for="memory">Memory</label>
-                    <input type="text" id="memory" name="memory">
+                    <label for="MemSizeMiB">Memory (MiB)</label>
+                    <input type="text" id="MemSizeMiB" name="MemSizeMiB">
                 </div>
                 <div class="form-group">
-                    <label for="storage">Storage</label>
-                    <input type="text" id="storage" name="storage">
+                    <label for="DiskSizeGB">Disk Size (GB)</label>
+                    <input type="text" id="DiskSizeGB" name="DiskSizeGB">
                 </div>
                 <div class="form-group">
-                    <label for="gpu">GPU</label>
-                    <input type="text" id="gpu" name="gpu">
+                    <label for="Gpu.Count">GPU Count</label>
+                    <input type="text" id="Gpu.Count" name="Gpu.Count">
                 </div>
                 <div class="form-group">
-                    <label for="gpuMemory">GPU Memory</label>
-                    <input type="text" id="gpuMemory" name="gpuMemory">
+                    <label for="Gpu.MemSizeGB">GPU Memory (GB)</label>
+                    <input type="text" id="Gpu.MemSizeGB" name="Gpu.MemSizeGB">
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group">
-                    <label for="operatingSystem">Operating System</label>
-                    <input type="text" id="operatingSystem" name="operatingSystem">
+                    <label for="OSDistribution">Operating System</label>
+                    <input type="text" id="OSDistribution" name="OSDistribution">
                 </div>
                 <div class="form-group">
                     <label for="preInstalledSw">Pre-Installed Software</label>
@@ -199,24 +199,24 @@
             <h3>Pricing Information</h3>                
             <div class="form-row">
                 <div class="form-group">
-                    <label for="pricingId">Pricing ID</label>
-                    <input type="text" id="pricingId" name="pricingId">
+                    <label for="PricingId">Pricing ID</label>
+                    <input type="text" id="PricingId" name="PricingId">
                 </div>
                 <div class="form-group">
-                    <label for="pricingPolicy">Pricing Policy</label>
-                    <input type="text" id="pricingPolicy" name="pricingPolicy">
+                    <label for="PricingPolicy">Pricing Policy</label>
+                    <input type="text" id="PricingPolicy" name="PricingPolicy">
                 </div>
                 <div class="form-group">
-                    <label for="unit">Unit</label>
-                    <input type="text" id="unit" name="unit">
+                    <label for="Unit">Unit</label>
+                    <input type="text" id="Unit" name="Unit">
                 </div>
                 <div class="form-group">
-                    <label for="currency">Currency</label>
-                    <input type="text" id="currency" name="currency">
+                    <label for="Currency">Currency</label>
+                    <input type="text" id="Currency" name="Currency">
                 </div>
                 <div class="form-group">
-                    <label for="price">Price</label>
-                    <input type="text" id="price" name="price">
+                    <label for="Price">Price</label>
+                    <input type="text" id="Price" name="Price">
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
@@ -225,16 +225,16 @@
             </div>
             <div class="form-row">
                 <div class="form-group">
-                    <label for="leaseContractLength">Lease Contract Length</label>
-                    <input type="text" id="leaseContractLength" name="leaseContractLength">
+                    <label for="LeaseContractLength">Lease Contract Length</label>
+                    <input type="text" id="LeaseContractLength" name="LeaseContractLength">
                 </div>
                 <div class="form-group">
-                    <label for="offeringClass">Offering Class</label>
-                    <input type="text" id="offeringClass" name="offeringClass">
+                    <label for="OfferingClass">Offering Class</label>
+                    <input type="text" id="OfferingClass" name="OfferingClass">
                 </div>
                 <div class="form-group">
-                    <label for="purchaseOption">Purchase Option</label>
-                    <input type="text" id="purchaseOption" name="purchaseOption">
+                    <label for="PurchaseOption">Purchase Option</label>
+                    <input type="text" id="PurchaseOption" name="PurchaseOption">
                 </div>
             </div>
 
