Change target spider ip to localhost for AnyCall:AWS CPU Monitoring

--- a/api-runtime/rest-runtime/admin-web/html/vm-mon.html
+++ b/api-runtime/rest-runtime/admin-web/html/vm-mon.html
@@ -35,7 +35,7 @@
   
   <!-- Form for Server Address, ConnectionName and VM ID -->
   <div id="form-container">
-    <input type="text" id="serverAddress" value="211.175.140.123" placeholder="Server Address" required>
+    <input type="text" id="serverAddress" value="localhost" placeholder="Server Address" required>
     <input type="text" id="connectionName" value="aws-config01" placeholder="Connection Name" required>
     <input type="text" id="vmId" value="i-0cdf129c3c544f614" placeholder="VM ID" required>
     <button id="fetchDataBtn">Fetch Data</button>
