--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
@@ -243,7 +243,11 @@
             <td class="center-text">{{$.Data.RegionName}}/{{.ZoneName}}</td>
             <td>
                 <ul>
-                    {{if .ProductInfo.VMSpecInfo}}
+                    {{if and (eq $.SimpleMode "ON") .ProductInfo.VMSpecName}}
+                        <!-- Simple Mode: VMSpecName only -->
+                        <li><strong>VMSpec: {{.ProductInfo.VMSpecName}}</strong></li>
+                        <li><em>Simple mode - detailed specs not available</em></li>
+                    {{else if .ProductInfo.VMSpecInfo}}
                         <!-- Detailed Mode: Full VMSpecInfo -->
                         <li><strong>VMSpec: {{.ProductInfo.VMSpecInfo.Name}}</strong></li>
                         <li>VCPU: {{.ProductInfo.VMSpecInfo.VCpu.Count}}</li>
@@ -257,7 +261,7 @@
                             {{end}}
                         {{end}}
                     {{else if .ProductInfo.VMSpecName}}
-                        <!-- Simple Mode: VMSpecName only -->
+                        <!-- Fallback: VMSpecName only when VMSpecInfo is not available -->
                         <li><strong>VMSpec: {{.ProductInfo.VMSpecName}}</strong></li>
                         <li><em>Simple mode - detailed specs not available</em></li>
                     {{else}}
