feat(adminweb): improve S3 error handling with server error parsing

--- a/api-runtime/rest-runtime/admin-web/html/s3.html
+++ b/api-runtime/rest-runtime/admin-web/html/s3.html
@@ -176,6 +176,15 @@
             </div>
         </div>
 
+        {{if .ErrorMessage}}
+        <script>
+            // Show error popup when page loads
+            window.addEventListener('DOMContentLoaded', function() {
+                alert('⚠️ S3 Connection Error:\n\n{{.ErrorMessage}}');
+            });
+        </script>
+        {{end}}
+
         <table id="bucket-table">
             <thead>
                 <tr>
