--- a/api-runtime/rest-runtime/admin-web/html/left_menu.html
+++ b/api-runtime/rest-runtime/admin-web/html/left_menu.html
@@ -162,8 +162,7 @@
     <a href="/spider/adminweb" target="_top" class="menu-item logo">
         <img src="./images/logo.png" border="0">
     </a>
-    <div class="text-menu" onclick="openSysStatsInNewWindow()">SysStats</div>
-    <div class="divider"></div> <!-- Divider after logo and SysStats -->
+    <div class="divider"></div> <!-- Divider after logo -->
     <div class="menu-item" onclick="selectLeftMenu('dashboard')">
         <img id="dashboard-img" src="./images/left-menu/dashboard.png" alt="Dashboard Icon">
         <div class="menu-text">Dashboard</div>
