--- a/api-runtime/rest-runtime/admin-web/html/left_menu.html
+++ b/api-runtime/rest-runtime/admin-web/html/left_menu.html
@@ -100,7 +100,7 @@
         function selectLeftMenu(menu) {
             changeSelectedImage(menu);
             const menuUrlMap = {
-                dashboard: "/spider/adminweb/dashboard?showEmpty=true",
+                dashboard: "/spider/adminweb/dashboard",
                 connection: "/spider/adminweb/connectionconfig"
             };
 
